added 4 new tasks

--- a/todo.txt
+++ b/todo.txt
@@ -8,3 +8,8 @@ Attend classes on time.
 Visit aunt.
 Apply for remote jobs
 Practice code
+Complete internship task.
+Practice chess openings.
+Solve chess puzzles.
+Check exam schedule
+
